src/objects/gdf_Smart_Thermo__c.object
<CustomObject>
    <fields>
        <fullName>gdf_Date__c</fullName>
        <description>meter readings quarter-hourly for this date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gdf_T1_Temp_00_00__c</fullName>
        <label>T1 Temp 00:00</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_T1_Temp_00_15__c</fullName>
        <label>T1 Temp 00:15</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_T1_Temp_00_30__c</fullName>
        <label>T1 Temp 00:30</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Smart Thermo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Smart Thermo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Thermos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>